<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp">

    <TextView
        android:id="@+id/tvItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/col_item_name" />

    <TextView
        android:id="@+id/tvQty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/col_quantity"
        android:gravity="center" />

    <Button
        android:id="@+id/btnDeleteRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_button" />

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="6dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="vertical" android:padding="12dp">
            <TextView android:id="@+id/tvName" android:textStyle="bold" android:textSize="18sp"
                android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            <TextView android:id="@+id/tvSku" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            <TextView android:id="@+id/tvQty" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            <TextView android:id="@+id/tvLocation" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
